--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Photographers</a>
+            <a class="nav-link js-scroll-trigger" href="#photographers">Photographers</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Customers</a>
@@ -68,8 +68,8 @@
     </div>
   </header>
 
-  <!-- Services -->
-  <section class="page-section" id="services">
+  <!-- Photographers -->
+  <section class="page-section" id="photographers">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -79,9 +79,13 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
+          <!-- <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+          </span> -->
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-image fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Showcase</h4>
           <p class="text-muted">What is your best photo? Let's us know</p>
@@ -89,7 +93,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-ad fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Sales</h4>
           <p class="text-muted">Sell your photos online, the easy way</p>
@@ -97,25 +101,25 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-calendar-alt fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Bidding</h4>
           <p class="text-muted">Bid on your suitable photography sessions</p>
         </div>
       </div>
       <div class="col text-center">
-          <a class="btn" href="#">Sign in as photographers</a>
+          <a class="nav-item" href="#">Sign in as photographers</a>
       </div>
     </div>
   </section>
 
-  <!-- Portfolio Grid -->
+  <!-- Customers Grid -->
   <section class="bg-light page-section" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Customers</h2>
+          <h3 class="section-subheading text-muted">There is only one boss. The customer</h3>
         </div>
       </div>
       <div class="row">
