--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
       <div class="col-lg-12 text-center">
         <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Register</button>
       </div>
-      <div> Alreayd a member? <a class="btn" onclick="login()">Login Now!</a></div>
+      <div> Already a member? <a class="btn" onclick="login()">Login Now!</a></div>
     </form>
     </div>
   </section>
